--- a/css/response_767.css
+++ b/css/response_767.css
@@ -246,7 +246,8 @@
     .music,
     .videos,
     .artist,
-    .card {
+    .card,
+    .service {
         margin-top: 40px;
     }
     .music_item-img,
@@ -286,7 +287,6 @@
     }
     .pagination {
         margin-top: 40px;
-        margin-bottom: 40px;
     }
     .pagination a img {
         width: 72%;
@@ -326,7 +326,9 @@
         line-height: 26px;
         margin-bottom: 10px;
     }
-    .album {
+    .album,
+    .service,
+    .pagination {
         margin-bottom: 60px;
     }
 
@@ -334,6 +336,26 @@
         font-size: 20px;
     }
  
+
+    .service_items {
+        margin-left: 0;
+        margin-bottom: -15px;
+    }
+    .service_items > * {
+        width: 100%;
+        margin-bottom: 15px;
+        margin-left: 0;
+        padding: 17px;
+    }
+    .service_item-title {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+    .service_item-text {
+        font-size: 15px;
+        line-height: 19px;
+        margin-bottom: 20px;
+    }
 
 
 
