--- a/css/response_1023.css
+++ b/css/response_1023.css
@@ -197,7 +197,9 @@
     .videos,
     .artist,
     .card,
-    .service {
+    .service,
+    .news,
+    .contacts {
         margin-top: 50px;
     }
 
@@ -231,7 +233,48 @@
         line-height: 1.4;
         margin-bottom: 15px;
     }
-   
+
+
+    .contacts_box {
+        flex-direction: column;
+    }
+    .contacts_info {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+        margin-bottom: 10px;
+        width: 100%;
+    }
+    .contacts_info > * {
+        width: calc(100%/2 - 30px);
+        margin-left: 30px;
+    }
+    .map_wrap {
+        width: 100%;
+        height: 360px;
+    }
+    .callback_box {
+        flex-direction: column;
+    }
+    .callback_form {
+        width: 100%;
+        margin-top: 25px;
+    }
+    .contacts_item-title {
+        font-size: 18px;
+        line-height: 25px;
+        margin-bottom: 10px;
+    }
+    .contacts_item-text {
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .contacts_item-text p br {
+        display: none;
+    }
+    .contacts_item-text p {
+        margin-bottom: 5px;
+    }
 
 
 
