--- a/css/response_479.css
+++ b/css/response_479.css
@@ -191,6 +191,13 @@
         margin-bottom: 40px;
     }
 
+    .map_wrap {
+        height: 240px;
+    }
+    .callback_form {
+        margin-top: 15px;
+    }
+
 
 
    
