--- a/css/styles.css
+++ b/css/styles.css
@@ -1730,7 +1730,9 @@ p.mb0 {
 .videos,
 .artist,
 .card,
-.service {
+.service,
+.news,
+.contacts {
     margin-top: 66px;
 }
 .videos_items {
@@ -1996,7 +1998,7 @@ p.mb0 {
     position: relative;
     overflow: hidden;
     max-width: 100%;
-    width: calc(100% - 420px);
+    width: calc(100% - 464px);
     height: 493px;
     transform: translateZ(0);
 }
@@ -2007,27 +2009,129 @@ p.mb0 {
     width: 100%;
     height: 100%;
 }
-.contacts {
-}
-.cont {
-}
-.releases_top {
-}
-.releases_title {
-}
-.title {
+.contacts_info {
+    width: 416px;
 }
 .contacts_box {
     display: flex;
     justify-content: space-between;
 }
-.contacts_info {
-}
 .contacts_item {
+    margin-bottom: 42px;
+}
+.contacts_item:last-child {
+    margin-bottom: 0;
 }
 .contacts_item-title {
+    display: flex;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 32px;
+    color: #55002B; 
+    margin-bottom: 7px;  
+}
+.contacts_item-title img {
+    margin-right: 15px;
 }
 .contacts_item-text {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 32px;
+    color: #282828; 
+    display: inline;
+    border-bottom: 1px solid #000;  
 }
-.map_wrap {
+.contacts_item:first-child .contacts_item-text,
+.contacts_item:last-child .contacts_item-text {
+    border-bottom: none;     
+}
+.contacts_item-text p {
+    margin-bottom: 10px;
+}
+.contacts_item-text p:last-child {
+    margin-bottom: 0;
+}
+
+.callback {
+
+}
+.cont {
+}
+.callback_box {
+    display: flex;
+    justify-content: space-between;
+}
+.releases_subtitle {
+    width: 416px;
+}
+.line {
+}
+.field {
+}
+.fieldset {
+}
+.btn {
+}
+.callback_form {
+    max-width: 100%;
+    width: calc(100% - 464px);
+    margin: 0;
+}
+.callback_form  .columns {
+    margin-left: -48px;
+    display: flex;
+}
+.callback_form .columns > * {
+    width: calc(50% - 48px);
+    margin-left: 48px;
+}
+.callback_form .line {
+    margin-bottom: 14px;
+}
+.callback_form .line .field {
+    display: flex;
+    flex-direction: column;
+}
+.callback_form .line .field label {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    color: #55002B;   
+    margin-bottom: 9px; 
+}
+.callback_form .line .field input {
+    font-family: var(--font_family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #8E8E8E; 
+    padding: 9px 14px;
+    background: #F7F7F7;
+    border-radius: 5px;   
+}
+.callback_form .line .field textarea {
+    font-family: var(--font_family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #8E8E8E; 
+    padding: 9px 14px;
+    background: #F7F7F7;
+    border-radius: 5px;   
+    border: none;
+    resize: none;
+    height: 80px;
+}
+.callback_form button {
+    margin-top: 24px;
+    background: #55002B;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 30px;
+    text-align: center;    
+    color: #FFFFFF; 
+    width: 185px;
+    height: 40px;  
 }
