--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ header .cont {
 .contact_callback {
     text-decoration: none;
     font-weight: 700;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 16px;
     color: #3D001B;
     padding: 8px 20px 8px;
@@ -446,7 +446,7 @@ header .menu .item:last-child {
 header .menu .item > a {
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 20px;
     letter-spacing: -0.015em;
     color: var(--bg2);
@@ -556,7 +556,7 @@ header .logo-mob {
 .title {
     font-weight: 900;
     font-size: var(--font_size_title);
-    line-height: 48px;
+    line-height: 1.3;
     text-transform: uppercase;
     color: var(--bg2);
     margin-right: 28px;
@@ -564,7 +564,8 @@ header .logo-mob {
 .slider-arrows,
 .slider-arrows2,
 .slider-arrows3,
-.slider-arrows4 {
+.slider-arrows4,
+.slider-arrows5 {
     display: flex;
 }
 .releases_item-img,
@@ -597,7 +598,7 @@ header .logo-mob {
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    color: #56595D;
+    color: var(--text_color);
 }
 
 .slick-slider{
@@ -687,7 +688,7 @@ header .logo-mob {
     font-weight: 600;
     font-size: var(--font_size);
     line-height: 16px;
-    color: #56595D;
+    color: var(--text_color);
 }
 
 
@@ -721,7 +722,7 @@ header .logo-mob {
     font-weight: 400;
     font-size: var(--font_size);
     line-height: 20px;
-    color: #56595D;
+    color: var(--text_color);
 }
 
 
@@ -956,7 +957,7 @@ header .logo-mob {
     color: var(--bg2);
 }
 .news_right .news_item:nth-child(1) .news_item-subtitle {
-    color: #56595D;
+    color: var(--text_color);
 }
 .news_right .news_item:nth-child(1) .news_item-img {
     border-bottom-right-radius: 12px;
@@ -1026,7 +1027,7 @@ form {
     font-size: 20px;
     line-height: 24px;
     text-transform: uppercase;
-    color: #56595D;
+    color: var(--text_color);
     margin-bottom: 59px;
     text-align: center;
 }
@@ -1055,7 +1056,7 @@ form .line .field input {
     font-weight: 600;
     font-size: var(--font_size);
     line-height: 16px;
-    color: #56595D; 
+    color: var(--text_color); 
 }
 form button {
     width: 100%;
@@ -1079,7 +1080,7 @@ form button:hover {
     font-size: 13px;
     line-height: 16px;
     letter-spacing: -0.02em;
-    color: #56595D;  
+    color: var(--text_color);  
     margin-top: 20px; 
 }
 
@@ -1110,7 +1111,7 @@ form button:hover {
     font-weight: 600;
     font-size: var(--font_size);
     line-height: 48px;
-    color: #56595D;
+    color: var(--text_color);
     margin-right: 4px;
 }
 
@@ -1162,7 +1163,7 @@ footer {
     font-weight: 500;
     font-size: var(--font_size);
     line-height: 16px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .footer_item ul li a:hover {
     color: #252628;
@@ -1226,21 +1227,21 @@ footer .contact_callback-red {
     font-weight: 400;
     font-size: 12px;
     line-height: 12px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .footer_politic {
     text-decoration: none;
     font-weight: 400;
     font-size: 12px;
     line-height: 12px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .site-map {
     text-decoration: none;
     font-weight: 400;
     font-size: 12px;
     line-height: 12px;
-    color: #56595D;
+    color: var(--text_color);
 }
 
 
@@ -1464,16 +1465,16 @@ footer .contact_callback-red {
 .breadcrumbs {
     margin-top: 136px;
     font-weight: 500;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 20px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .breadcrumbs a {
     text-decoration: none;
     font-weight: 500;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 20px;
-    color: #56595D;   
+    color: var(--text_color);   
 }
 .about_title {
     margin-bottom: 64px;
@@ -1483,7 +1484,7 @@ footer .contact_callback-red {
     font-size: 28px;
     line-height: 32px;
     text-transform: uppercase;
-    color: #2C3036;
+    color: var(--text_color);
     margin-bottom: 16px;
 }
 .about_description-text p {
@@ -1491,7 +1492,7 @@ footer .contact_callback-red {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #56595D;
+    color: var(--text_color);;
 }
 p.mb0 {
     margin-bottom: 0;
@@ -1543,7 +1544,7 @@ p.mb0 {
     line-height: 24px;
     text-align: center;
     text-transform: uppercase;
-    color: #55002B;
+    color: var(--bg2);
 }
 .page .artists {
     margin-bottom: 193px;
@@ -1558,7 +1559,7 @@ p.mb0 {
     font-size: 28px;
     line-height: 48px;
     text-transform: uppercase;
-    color: #2C3036;
+    color: var(--text_color);
     margin-right: 28px;
 }
 .releases_bottom {
@@ -1570,6 +1571,9 @@ p.mb0 {
 
 .video {
     margin-top: 64px;    
+}
+.video .releases_item-img {
+    padding-bottom: 67%;   
 }
 .page .releases .cont {
     position: relative;
@@ -1604,14 +1608,14 @@ p.mb0 {
     font-size: 20px;
     line-height: 24px;
     text-transform: uppercase;
-    color: #2C3036;
+    color: var(--text_color);
     margin-bottom: 8px;
 }
 .music_item-text {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .music_item-img img {
     position: absolute;
@@ -1643,9 +1647,9 @@ p.mb0 {
     align-items: center;
     justify-content: center;
     font-weight: 500;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 16px;
-    color: #56595D;
+    color: var(--text_color);
     width: 46px;
     height: 46px;
     border: 1px solid #C6BEB3;
@@ -1666,14 +1670,14 @@ p.mb0 {
     margin-left: 91px;
 }
 .pagination a.active {
-    background: #55002B;
+    background: var(--bg2);
     color: #fff;
-    border: 1px solid #55002B;
+    border: 1px solid var(--bg2);
 }
 .pagination a:hover {
     background: #55002B;
     color: #fff;
-    border: 1px solid #55002B;
+    border: 1px solid var(--bg2);
 }
 .pagination span {
     margin-left: 25px;
@@ -1719,7 +1723,7 @@ p.mb0 {
 .music_item-links a:last-child {
     margin-bottom: 0;
     font-weight: 600;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 30px;
     color: rgba(44, 48, 54, 0.8);
 }
@@ -1732,7 +1736,8 @@ p.mb0 {
 .card,
 .service,
 .news,
-.contacts {
+.contacts,
+.post {
     margin-top: 66px;
 }
 .videos_items {
@@ -1753,14 +1758,14 @@ p.mb0 {
     font-size: 20px;
     line-height: 24px;
     text-transform: uppercase;
-    color: #2C3036;
+    color: var(--text_color);
     margin-bottom: 8px;
 }
 .videos_item-text {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .videos_item-img img {
     position: absolute;
@@ -1805,7 +1810,7 @@ p.mb0 {
     font-weight: 600;
     font-size: var(--font_size);
     line-height: 16px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .artist_item-img {
     position: relative;
@@ -1856,21 +1861,21 @@ p.mb0 {
     font-size: 25px;
     line-height: 28px;
     text-transform: uppercase;
-    color: #2C3036; 
+    color: var(--text_color);
     margin-bottom: 8px;
 }
 .card_item-post {
     font-weight: 600;
     font-size: 18px;
     line-height: 16px;
-    color: #56595D; 
+    color: var(--text_color);
     margin-bottom: 26px;
 }
 .card_item-text {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #56595D;
+    color: var(--text_color);
 }
 .card_item-links {
     display: flex;
@@ -1890,7 +1895,8 @@ p.mb0 {
 
 /* album */
 .album,
-.service {
+.service,
+.news-slider {
     margin-bottom: 120px;
 }
 .album_item {
@@ -1910,7 +1916,7 @@ p.mb0 {
     font-weight: 700;
     font-size: 25px;
     line-height: 32px;
-    color: #2C3036;
+    color: var(--text_color);
     margin-bottom: 28px;
 }
 .album_item-img img {
@@ -1934,9 +1940,9 @@ p.mb0 {
 }
 .album_item ol li {
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 20px;
-    color: #56595D;    
+    color: var(--text_color);    
 }
 
 
@@ -1967,24 +1973,24 @@ p.mb0 {
     font-weight: 700;
     font-size: 25px;
     line-height: 32px;
-    color: #2C3036;
+    color: var(--text_color);
     margin-bottom: 28px;
 }
 .service_item-text {
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 20px;
-    color: #56595D;
+    color: var(--text_color);
     margin-bottom: 28px;
 }
 .service_item-btn {
     text-decoration: none;
     margin-top: auto;
-    background: #55002B;
+    background: var(--bg2);
     border-radius: 100px;
     padding: 12px 20px;
     font-weight: 700;
-    font-size: 16px;
+    font-size: var(--font_size);
     color: #FFFFFF;
     text-align: start;
     width: 116px;
@@ -2027,7 +2033,7 @@ p.mb0 {
     font-weight: 700;
     font-size: 21px;
     line-height: 32px;
-    color: #55002B; 
+    color: var(--bg2);
     margin-bottom: 7px;  
 }
 .contacts_item-title img {
@@ -2053,26 +2059,15 @@ p.mb0 {
     margin-bottom: 0;
 }
 
-.callback {
 
-}
-.cont {
-}
 .callback_box {
     display: flex;
     justify-content: space-between;
 }
-.releases_subtitle {
+.contacts .releases_subtitle {
     width: 416px;
 }
-.line {
-}
-.field {
-}
-.fieldset {
-}
-.btn {
-}
+
 .callback_form {
     max-width: 100%;
     width: calc(100% - 464px);
@@ -2097,7 +2092,7 @@ p.mb0 {
     font-weight: 700;
     font-size: 14px;
     line-height: 22px;
-    color: #55002B;   
+    color: var(--bg2);
     margin-bottom: 9px; 
 }
 .callback_form .line .field input {
@@ -2125,13 +2120,157 @@ p.mb0 {
 }
 .callback_form button {
     margin-top: 24px;
-    background: #55002B;
+    background: var(--bg2);
     border-radius: 8px;
     font-weight: 600;
-    font-size: 16px;
+    font-size: var(--font_size);
     line-height: 30px;
     text-align: center;    
     color: #FFFFFF; 
     width: 185px;
     height: 40px;  
+}
+
+
+/* post */
+.post .releases_top {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.news_date {
+    margin-top: 64px;
+    font-weight: 400;
+    font-size: var(--font_size);
+    line-height: 20px;
+    color: var(--text_color);
+    margin-bottom: 24px;
+}
+.news_item-description {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: var(--text_color);
+    margin-top: 16px;
+}
+.post_item {
+    display: flex;
+}
+.post_item-img {
+    width: 416px;
+    height: 528px;
+    margin-right: 48px;
+    flex-shrink: 0;
+}
+.post_item-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.post_item-text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: var(--text_color);
+}
+.news-slider_item-title {
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 32px;
+    text-transform: uppercase;
+    color: var(--text_color);
+    margin-bottom: 16px;
+}
+.news-slider_item-img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.news-slider_item-img {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 60%;
+    border-radius: 12px;
+}
+
+.post-one .post_item-img {
+    width: 648px;
+    height: 443px;
+    margin-right: 48px;
+    flex-shrink: 0;
+}
+.post-one .post_item-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+}
+.post-one .news_date {
+    margin-bottom: 0;
+}
+.post-one .releases_top {
+    margin-bottom: 24px;
+}
+
+
+
+.modal {
+}
+.service-callback {
+    padding: 15px 40px 55px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+    max-width: 450px;
+    width: 100%;
+}
+.service-callback_title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #55002B;
+    margin-bottom: 47px;
+}
+.service-callback_form .line {
+    margin-bottom: 14px;
+}
+.service-callback_form .line .field label {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    color: #55002B;
+    margin-bottom: 9px;    
+}
+.service-callback_form .line .field input {
+    background: #F7F7F7;
+    border-radius: 5px;
+    padding: 9px 14px;
+    font-family: var(--font_family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #8E8E8E;
+}
+.service-callback_form .line .field textarea {
+    background: #F7F7F7;
+    border-radius: 5px;
+    padding: 9px 14px;
+    font-family: var(--font_family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #8E8E8E;
+    resize: none;
+    border: none;
+    height: 80px;  
+}
+.service-callback_form button {
+    margin-top: 21px;
+    height: 40px;
 }
