--- a/css/response_479.css
+++ b/css/response_479.css
@@ -198,7 +198,7 @@
         margin-top: 15px;
     }
 
-    .post_item-img {
+    .post .text_block img {
         width: 100%;
         height: auto;
     }
@@ -206,7 +206,7 @@
         margin-top: 18px;
     }
 
-    .post-one .post_item-img {
+    .post-one .text_block img {
         width: 100%;
         height: auto;
         margin-bottom: 15px;
@@ -214,6 +214,10 @@
 
     .service-callback {
         padding: 15px 20px 25px;
+    }
+
+    .page .news_right .news_item:nth-child(2) {
+        width: 100%;
     }
 
 
