--- a/css/response_479.css
+++ b/css/response_479.css
@@ -111,9 +111,8 @@
         padding: 40px 0 40px;
     }
     .releases_top, 
-    .news_head, 
-    .advantages_title,
-    .about_title {
+    .news_head,
+    .text_block h1 {
         margin-bottom: 18px;
     }
     .advantages_title {
@@ -136,11 +135,11 @@
     .about_quote {
         padding: 40px 0px 40px;
     }
-    .about_description-title {
+    .about h2 {
         font-size: 18px;
         margin-bottom: 10px;
     }
-    .about_description-text p {
+    .about p {
         margin-bottom: 7px;
         font-size: 16px;
     }
@@ -220,7 +219,20 @@
         width: 100%;
     }
 
+    .post .text_block img {
+        width: 100%;
+        height: auto;
+    }
 
+
+    .block {
+        margin-bottom: 40px;
+    }
+
+    .about .about_description img {
+        width: 100%;
+        height: auto;
+    }
 
    
 }
