--- a/css/styles.css
+++ b/css/styles.css
@@ -561,6 +561,14 @@ header .logo-mob {
     color: var(--bg2);
     margin-right: 28px;
 }
+.text_block h1 {
+    font-weight: 900;
+    font-size: var(--font_size_title);
+    line-height: 1.3;
+    text-transform: uppercase;
+    color: var(--bg2);
+    margin-bottom: 64px;
+}
 .slider-arrows,
 .slider-arrows2,
 .slider-arrows3,
@@ -1478,58 +1486,33 @@ footer .contact_callback-red {
     line-height: 20px;
     color: var(--text_color);   
 }
-.about_description-title {
+.about h2 {
     font-weight: 800;
     font-size: 28px;
     line-height: 32px;
     text-transform: uppercase;
     color: var(--text_color);
     margin-bottom: 16px;
+    margin-top: 36px;
 }
-.about_description-text p {
+.about p {
     margin-bottom: 20px;
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: var(--text_color);;
+    color: var(--text_color);
 }
-p.mb0 {
-    margin-bottom: 0;
-}
-.about_description-text.mb64 {
-    margin-bottom: 64px;
-}
-.about_description-box {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 64px;
-}
-.about_description-box.second {
-    margin-bottom: 0;
-}
-.about_description-box .about_img {
+.about .about_description img {
     margin-left: 48px;
+    margin-bottom: 48px;
     width: 647px;
     height: 443px;
-    flex-shrink: 0;
-}
-.about_img img {
+    flex-shrink: 0;    
     border-radius: 12px;
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    display: block; 
+    float: right;
 }
-.about_description-box.second .about_img {
-    margin-left: 0;
-    margin-right: 48px;
-}
-.block {
-    margin-bottom: 64px;
-}
-.about_description-text p:last-child {
-    margin-bottom: 0;
-}
+
 
 
 /* about_quote */
@@ -1594,6 +1577,9 @@ p.mb0 {
     left: 0;
     bottom: -150px;
     background: url(../images/line.svg);
+}
+.block {
+    margin-bottom: 120px;
 }
 
 
@@ -2176,10 +2162,15 @@ p.mb0 {
     width: 416px;
     height: 528px;
     margin-right: 48px;
-    margin-top: 64px;
-    margin-bottom: 64px;
+    margin-top: 48px;
+    margin-bottom: 48px;
     flex-shrink: 0;
     float: left;
+}
+.post-one .text_block img {
+    width: 648px;
+    height: 443px;
+    flex-shrink: 0;
 }
 .post_item-text {
     font-weight: 500;
